--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>121393 5x5</title>
+  <title>Game #34</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,14 +16,15 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">121393</h1>
+      <h1 class="title">Game #34</h1>
+      <h2 class="title">121393, spawns 1597 & 2584</h2>
       <div class="scores-container">
         <div class="score-container">0</div>
       </div>
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers in sequence for the 121393 tile!</p>
+      <p class="game-intro">How about we start with 1597 tile?</p>
       <a class="restart-button">Restart</a>
     </div>
 
